Fix mobile link wrapping.

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -206,3 +206,7 @@
   box-shadow: inset 0 0 5px rgb(0, 3, 0);
   border: 2px solid rgba(20, 0, 0, 0.521);
 }
+
+.tab-content a {
+  display: inline-block;
+}
